lib_LTLIBRARIES = libmysqludf_urldecode.la libmysqludf_urlencode.la libmysqludf_humanage.la

libmysqludf_urldecode_la_SOURCES = lib/mysqludf_urldecode.c
libmysqludf_urlencode_la_SOURCES = lib/mysqludf_urlencode.c
libmysqludf_humanage_la_SOURCES = lib/mysqludf_humanage.c lib/duration.c

EXTRA_DIST = lib/duration.h
